<resources>
    <string name="app_name">DisMaps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bad_request_message">Requested data could not be found.</string>
    <string name="forbidden_message">User not valid, please re-login.</string>
    <string name="not_found_message">Sorry, we cannot found requested content.</string>
    <string name="conflict_message">Conflict when requesting to server.</string>
    <string name="unsupported_media_type_message">Unsupported media type.</string>
    <string name="too_many_request_message">Request quota exceed.</string>
    <string name="internal_server_error_message">Internal server error.</string>
    <string name="service_unavailable_message">Service unavailable.</string>
    <string name="internet_error_message">No internet connection.</string>
    <string name="http_error_message">Something went wrong!</string>
    <string name="empty_message">Doesn\'t have a record of disaster at this moment.</string>
    <string name="province_not_found">Province not found.</string>
    <string name="flood">Flood</string>
    <string name="earthquake">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="haze">Haze</string>
    <string name="wind">Wind</string>
    <string name="volcano">Volcano</string>
    <string name="filter">Filter</string>
    <string name="all">All</string>
    <string name="search">Search</string>
    <string name="search_province">Search province</string>
    <string name="settings">Settings</string>
    <string name="all_province">All province</string>
    <string name="retry">Retry</string>
    <string name="x">X</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="water_level_alert">Water Level Alert</string>
    <string name="set_filter">Set Filter</string>
    <string name="app_ver">Dismaps v1.0.0</string>
    <string name="in_the_past_hour">in the past hour</string>
    <string name="between_date">between %1$s</string>
    <string name="disaster_message">There have been %1$d disasters %2$s. Stay safe!</string>
    <string name="back">back</string>
    <string name="water_level_depth">Water level depth: %1$s</string>
    <string name="no_notif_permission">Cannot send alert due to permission!</string>
</resources>